Pontoon: Update Punjabi (pa-IN) localization of Firefox Co-authored-by: Aman Alam <amanpreet.alam@gmail.com>

--- a/pa-IN/browser/chrome/browser/browser.properties
+++ b/pa-IN/browser/chrome/browser/browser.properties
@@ -462,6 +462,7 @@ canvas.remember=ਮੇਰੇ ਫ਼ੈਸਲੇ ਨੂੰ ਹਮੇਸ਼ਾ ਯਾ
 
 # WebAuthn prompts
 # LOCALIZATION NOTE (webauthn.registerPrompt2): %S is hostname
+webauthn.registerPrompt2=%S ਤੁਹਾਡੇ ਸੁਰੱਖਿਆ ਕੀਆਂ ਵਿੱਚੋਂ ਇੱਕ ਨਾਲ ਖਾਤਾ ਰਜਿਸਟਰ ਕਰਨਾ ਚਾਹੁੰਦਾ ਹੈ। ਤੁਸੀਂ ਇੱਕ ਨੂੰ ਹੁਣ ਕਨੈਕਟ ਕਰਕੇ ਪਰਮਾਣਿਤ ਕਰ ਸਕਦੇ ਹੋ ਜਾਂ ਰੱਦ ਕਰ ਸਕਦੇ ਹੋ।
 # LOCALIZATION NOTE (webauthn.registerDirectPrompt2):
 # %1$S is hostname. %2$S is brandShortName.
 # The website is asking for extended information about your
