--- a/de/browser/installer/nsisstrings.properties
+++ b/de/browser/installer/nsisstrings.properties
@@ -27,7 +27,9 @@ STUB_CLEANUP_PAVEOVER_BUTTON=&Aktualisieren
 STUB_CLEANUP_REINSTALL_BUTTON=&Neu installieren
 STUB_CLEANUP_CHECKBOX_LABEL=Einstellungen &zurücksetzen und alte Add-ons entfernen für beste Leistung
 
+STUB_CLEANUP_PAVEOVER_BUTTON2=Update
 STUB_CLEANUP_REINSTALL_BUTTON2=Neu installieren
+STUB_CLEANUP_CHECKBOX_LABEL2=Für optimale Leistung Standardeinstellungen wiederherstellen und alte Add-ons entfernen
 
 STUB_INSTALLING_LABEL2=Wird jetzt installiert…
 # The \n in the next string is intended to force a nice-looking layout in en-US
@@ -35,6 +37,8 @@ STUB_INSTALLING_LABEL2=Wird jetzt installiert…
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Privatsphäre hat oberste Priorität.\nKommen Sie zu $BrandProductName.
 STUB_INSTALLING_BODY=Holen Sie sich weitere unserer Produkte, bei denen die Privatsphäre an erster Stelle steht, und erfahren Sie, wie Sie online klüger und sicherer unterwegs sind.
+STUB_INSTALLING_HEADLINE2=Einstellungen für optimale Geschwindigkeit, Datenschutz und Sicherheit anpassen
+STUB_INSTALLING_BODY2=$BrandShortName ist gleich bereit.
 STUB_BLURB_FIRST1=$BrandShortName - so schnell wie noch nie
 STUB_BLURB_SECOND1=Schnelleres Laden von Seiten und Wechseln von Tabs
 STUB_BLURB_THIRD1=Privates Surfen leicht gemacht
