--- a/de/devtools/client/debugger.properties
+++ b/de/devtools/client/debugger.properties
@@ -687,6 +687,7 @@ inlinePreview.show.label=Eingebettete Vorschau anzeigen
 inlinePreview.hide.label=Eingebettete Vorschau ausblenden
 
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Debugger-Einstellungen
 
 # LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
 # label for disabling JavaScript
@@ -694,6 +695,7 @@ settings.disableJavaScript.label=JavaScript deaktivieren
 
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=JavaScript deaktivieren (erfordert erneutes Laden der Seite)
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
@@ -752,6 +754,7 @@ watchpoints.setWatchpoint=set für Eigenschaft
 
 # LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
+watchpoints.getOrSetWatchpoint=Eigenschaft setzen oder abrufen
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
 # context menu to delete a watchpoint on an object property.
