--- a/de/devtools/client/netmonitor.properties
+++ b/de/devtools/client/netmonitor.properties
@@ -923,6 +923,7 @@ netmonitor.tab.params=Parameter
 
 # LOCALIZATION NOTE (netmonitor.tab.request): This is the label displayed
 # in the network details pane identifying the request tab.
+netmonitor.tab.request=Anfrage
 
 # LOCALIZATION NOTE (netmonitor.tab.response): This is the label displayed
 # in the network details pane identifying the response tab.
@@ -1061,6 +1062,10 @@ netmonitor.toolbar.timings=Zeiten
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=Antwortkopfzeilen
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
 netmonitor.summary.url=Angefragte Adresse:
@@ -1110,6 +1115,10 @@ netmonitor.summary.rawHeaders.responseHeaders=Antwortkopfzeilen:
 # LOCALIZATION NOTE (netmonitor.summary.size): This is the label displayed
 # in the network details headers tab identifying the headers size.
 netmonitor.summary.size=Kopfzeilen-Größe:
+
+# LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
+# on the button in the headers tab that toggle view for raw request/response headers
+# from the currently displayed request
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
@@ -1551,12 +1560,16 @@ netmonitor.cache.device=Cache-Typ
 
 # LOCALIZATION NOTE (netmonitor.settings.menuTooltip): This is the tooltip that gets displayed
 # when the settings menu button is hovered.
+netmonitor.settings.menuTooltip=Netzwerk-Einstellungen
 
 # LOCALIZATION NOTE (netmonitor.settings.importHarTooltip): This is the tooltip that gets displayed
 # when the HAR import menu item is hovered
+netmonitor.settings.importHarTooltip=HAR-Datei mit Netzwerkverkehrsdaten importieren
 
 # LOCALIZATION NOTE (netmonitor.settings.saveHarTooltip): This is the tooltip that gets displayed
 # when the HAR save menu item is hovered
+netmonitor.settings.saveHarTooltip=HAR-Datei mit Netzwerkverkehrsdaten speichern
 
 # LOCALIZATION NOTE (netmonitor.settings.copyHarTooltip): This is the tooltip that gets displayed
 # when the HAR copy menu item is hovered
+netmonitor.settings.copyHarTooltip=Netzwerkverkehrsdaten in Zwischenablage kopieren
