--- a/de/devtools/client/webconsole.properties
+++ b/de/devtools/client/webconsole.properties
@@ -226,6 +226,11 @@ webconsole.menu.selectAll.accesskey=A
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label=In Sidebar öffnen
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1=Objekt in Sidebar öffnen
 webconsole.menu.openInSidebar.accesskey=S
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
