Pontoon: Update German (de) localization of Firefox Co-authored-by: archaeopteryx <archaeopteryx@coole-files.de>

--- a/de/dom/chrome/security/security.properties
+++ b/de/dom/chrome/security/security.properties
@@ -149,7 +149,9 @@ XFOSameOrigin = Laden verboten durch X-Frame-Options: "%1$S" von "%2$S", Website
 
 # X-Frame-Options
 # LOCALIZATION NOTE(XFrameOptionsInvalid): %1$S is the header value, %2$S is frame URI. Do not translate "X-Frame-Options".
+XFrameOptionsInvalid = Beim Laden von "%2$S" wurde eine ungültige X-Frame-Options-Kopfzeile gefunden: "%1$S" ist keine gültige Direktive.
 # LOCALIZATION NOTE(XFrameOptionsDeny): %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI. Do not translate "X-Frame-Options".
+XFrameOptionsDeny=Die "X-Frame-Options"-Direktive "%1$S" verbietet das Laden von "%2$S" in einem Frame.
 
 # HTTPS-Only Mode
 # LOCALIZATION NOTE: %1$S is the URL of the upgraded request; %2$S is the upgraded scheme.
