--- a/de/netwerk/necko.properties
+++ b/de/netwerk/necko.properties
@@ -58,6 +58,7 @@ CookieAllowedForOriginOnTrackerByHeuristic=Speicherzugriff automatisch erlaubt f
 CookieAllowedForTrackerByHeuristic=Speicherzugriff automatisch erlaubt für Element zur Aktivitätenverfolgung (Tracker) "%2$S" auf "%1$S".
 
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForFpiByHeuristic=Automatisch Speicherzugriff gewährt für Isolierung von Ressourcen gleichen Ursprungs: "%2$S" auf "%1$S".
 
 # LOCALIZATION NOTE(CookieRejectedNonRequiresSecure): %1$S is the cookie name. Do not localize "sameSite=none" and "secure".
 CookieRejectedNonRequiresSecure=Cookie "%1$S" abgelehnt, weil es das “sameSite=none”-Attribut besitzt, aber das "secure"-Attribut fehlt.
