Pontoon: Update Esperanto (eo) localization of Firefox Co-authored-by: Eduardo Trápani <etrapani@vera.com.uy>

--- a/eo/browser/chrome/browser/browser.properties
+++ b/eo/browser/chrome/browser/browser.properties
@@ -440,7 +440,6 @@ newWindowButton.tooltip=Malfermi novan fenestron (%S)
 newTabButton.tooltip=Malfermi novan langeton (%S)
 
 newTabContainer.tooltip=Malfermi novan langeton (%S)\nPremi kaj teni por malfermi novan ingan langeton
-
 newTabAlwaysContainer.tooltip=Elekti ingon por malfermi novan langeton
 
 # Offline web applications
@@ -701,6 +700,8 @@ protections.blocking.trackingContent.title=Blokado de spurila enhavo
 protections.blocking.socialMediaTrackers.title=Blokado de sociretaj spuriloj
 protections.notBlocking.fingerprinters.title=Sen blokado de identigiloj de ciferecaj spuroj
 protections.notBlocking.cryptominers.title=Sen blokado de miniloj de ĉifromono
+protections.notBlocking.cookies.3rdParty.title=Sen blokado de nerektaj kuketoj
+protections.notBlocking.cookies.all.title=Sen blokado de kuketoj
 protections.notBlocking.crossSiteTrackingCookies.title=Sen blokado de interretejaj spurilaj kuketoj
 protections.notBlocking.trackingContent.title=Sen blokado de spurila enhavo
 protections.notBlocking.socialMediaTrackers.title=Sen blokado de sociretaj spuriloj
@@ -1207,14 +1208,6 @@ storageAccess.DontAllow.accesskey = B
 # %2$S is the name of the site URL (www.site2.example) that the user is visiting.  This is the same domain name displayed in the address bar.
 storageAccess.message = Ĉu vi permesos al %1$S  spuri vian retumon en %2$S?
 
-# LOCALIZATION NOTE (storageAccess.description.label):
-# %1$S is the name of the site URL (www.site1.example) trying to track the user's activity.
-# %2$S will be replaced with the localized version of storageAccess.description.learnmore.  This text will be converted into a hyper-link linking to the SUMO page explaining the concept of third-party trackers.
-storageAccess.description.label = Estas konsilinde bloki %1$S sur tiu ĉi retejo, se vi ĝin ne rekonas aŭ ne fidas. Pli da informo pri %2$S
-# LOCALIZATION NOTE (storageAccess.description.learnmore):
-# The value of this string is embedded inside storageAccess.description.label.  See the localization note for storageAccess.description.label.
-storageAccess.description.learnmore = nerektaj spuriloj
-
 # LOCALIZATION NOTE (storageAccess2.message):
 # %1$S is the name of the site URL (www.site1.example) trying to track the user's activity.
 # %2$S is the name of the site URL (www.site2.example) that the user is visiting.  This is the same domain name displayed in the address bar.
@@ -1235,3 +1228,6 @@ confirmationHint.breakageReport.label = Raporto sendita. Dankon!
 # Used by the export of user's live bookmarks to an OPML file as a title for the file.
 # %S will be replaced with brandShortName
 livebookmarkMigration.title                      = Aktivaj legosignoj de %S
+
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
