--- a/eo/dom/chrome/dom/dom.properties
+++ b/eo/dom/chrome/dom/dom.properties
@@ -424,3 +424,5 @@ MathML_DeprecatedStyleAttributeWarning=La atributoj de MathML “background”, 
 MathML_DeprecatedXLinkAttributeWarning=La atributoj de XLink “href”, “type”, “show” kaj “actuate” estas kadukaj kaj estos forigitaj en la estonteco.
 WebShareAPI_Failed=La kundivida operacio malsukcesis.
 WebShareAPI_Aborted=La kundivida operacio estis interrompita.
+# LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
+UnknownProtocolNavigationPrevented=Pluiro al “%1$S” blokita pro nekonata protokolo.
