--- a/eo/dom/chrome/layout/css.properties
+++ b/eo/dom/chrome/layout/css.properties
@@ -7,6 +7,7 @@ MimeNotCssWarn=La stilfolio %1$S estis ŝargita kiel CSS malgraŭ tio ke ĝia MI
 
 PEUnexpEOF2=Neatendita fino de dosiero dum serĉado de %1$S.
 PEParseRuleWSOnly=Kateno, kiu nur havas spacetajn signojn, estis ricevita kiel rekonota regulo.
+
 PEDeclDropped=Deklaro abandonita.
 PEDeclSkipped=Pretersaltis al la sekvanta deklaro.
 PEUnknownProperty=Nekonata atributo'%1$S'.
@@ -178,6 +179,8 @@ PESubgridNotSupported=Support for the 'subgrid' keyword of CSS Grid is not enabl
 PEMoreThanOneGridRepeatAutoFillInNameList=Only one repeat(auto-fill, …) is allowed in a name list for a subgrid.
 PEMoreThanOneGridRepeatAutoFillFitInTrackList=Only one repeat(auto-fill, …) or repeat(auto-fit, …) is allowed in a track list.
 PEMoreThanOneGridRepeatTrackSize=Only one track size is allowed inside repeat(auto-fit/auto-fill, …).
+
+PEDisallowedImportRule=reguloj @import ankoraŭ ne validas en konstruitaj stilfolioj.
 
 TooLargeDashedRadius=La radiuso de la rando estas tro granda por la stilo ‘dashed’ (la limo estas 100000px). Ĝi estos videbligita kiel solida rando.
 TooLargeDottedRadius=Border radius is too large for ‘dotted’ style (the limit is 100000px). Rendering as solid.
