Pontoon: Update Esperanto (eo) localization of Firefox Co-authored-by: Eduardo Trápani <etrapani@vera.com.uy>

--- a/eo/browser/chrome/browser/browser.properties
+++ b/eo/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Alpinglita!
 confirmationHint.pinTab.description = Alklaku la langeton per la dekstra butono por depingli ĝin.
 
 confirmationHint.passwordSaved.label = Pasvorto konservita!
+confirmationHint.loginRemoved.label = Legitimilo forigita!
 confirmationHint.breakageReport.label = Raporto sendita. Dankon!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
@@ -1231,3 +1232,4 @@ livebookmarkMigration.title                      = Aktivaj legosignoj de %S
 
 # LOCALIZATION NOTE (gnomeSearchProviderSearch):
 # Used for search by Gnome Shell activity screen, %S is a searched string.
+gnomeSearchProviderSearch=Serĉi %S en la teksaĵo
