--- a/eo/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/eo/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -5,9 +5,10 @@
 # LOCALIZATION NOTE: These strings are used for startup/profile problems and the profile manager.
 
 # Application not responding
-# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
+# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker2, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
 restartTitle=Fermi %S
 restartMessageNoUnlocker=%S jam estas funkcianta, sed ĝi ne respondas. Por malfermi novan fenestron vi devas unue fermi la ekzistantan procezon %S aŭ restartigi vian komputilon.
+restartMessageNoUnlocker2=%S jam estas funkcianta, sed ĝi ne respondas. Por uzi %S vi devas unue fermi la ekzistantan procezon %S, restartigi vian komputilon aŭ uzi alian profilon.
 restartMessageUnlocker=%S jam estas funkcianta, sed ĝi ne respondas. Por malfermi novan fenestron vi devas unue fermi la malnovan procezon %S.
 restartMessageNoUnlockerMac=Kopio de %S jam estas malfermita. Nur unu kopion de %S povas esti malfermita en iu ajn momento.
 restartMessageUnlockerMac=Kopio de %S jam estas malfermita. La funkcianta kopio de %S finiĝos por povi malfermi tiun ĉi.
