--- a/eo/devtools/client/debugger.properties
+++ b/eo/devtools/client/debugger.properties
@@ -55,6 +55,34 @@ setDirectoryRoot.accesskey=r
 removeDirectoryRoot.label=Forigi radikan dosierujon
 removeDirectoryRoot.accesskey=d
 
+# LOCALIZATION NOTE (blackBoxAll.label): Text associated with the blackbox context menu item
+blackBoxAll.label=Nigra skatolo
+
+# LOCALIZATION NOTE (blackBoxAllInGroup.label): This is the text that appears in the
+# context submenu to blackbox all files inside of the selected group
+blackBoxAllInGroup.label=Meti la ĉi grupan dosierojn en nigran skatolon
+
+# LOCALIZATION NOTE (unblackBoxAllInGroup.label): This is the text that appears in the
+# context submenu to unblackbox all files inside of the selected group
+
+# LOCALIZATION NOTE (blackBoxAllOutsideGroup.label): This is the text that appears in the
+# context submenu to blackbox all files outside of the selected group
+
+# LOCALIZATION NOTE (unblackBoxAllOutsideGroup.label): This is the text that appears in the
+# context submenu to unblackbox all files outside of the selected group
+
+# LOCALIZATION NOTE (blackBoxAllInDir.label): This is the text that appears in the
+# context submenu to blackbox all files inside of the selected directory
+
+# LOCALIZATION NOTE (unblackBoxAllInDir.label): This is the text that appears in the
+# context submenu to unblackbox all files inside of the selected directory
+
+# LOCALIZATION NOTE (blackBoxAllOutsideDir.label): This is the text that appears in the
+# context submenu to blackbox all files outside of the selected directory
+
+# LOCALIZATION NOTE (unblackBoxAllOutsideDir.label: This is the text that appears in the
+# context submenu to unblackbox all files outside of the selected directory
+
 # LOCALIZATION NOTE (copyFunction.label): This is the text that appears in the
 # context menu to copy the function the user selected
 copyFunction.label=Kopii funkcion
@@ -651,6 +679,14 @@ inlinePreview.show.label=Montri enmetitan antaŭvidon
 # for hiding the inline preview block
 inlinePreview.hide.label=Kaŝi enmetitan antaŭvidon
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Neniu atributo
@@ -705,6 +741,9 @@ watchpoints.getWatchpoint=Lego de atributo
 # LOCALIZATION NOTE (watchpoints.setWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
 watchpoints.setWatchpoint=Skribo de atributo
+
+# LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
+# watchpoints submenu to add a "set" watchpoint on an object property.
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
 # context menu to delete a watchpoint on an object property.
@@ -1053,11 +1092,6 @@ whyPaused.mutationBreakpointRemoved=Forigita:
 # in a info block explaining how the debugger is currently paused at
 # a JS execution
 whyPaused.interrupted=Paŭzinta en rulado
-
-# LOCALIZATION NOTE (whyPaused.replayForcedPause): The text that is displayed
-# in a info block explaining how the debugger is currently paused in a
-# recording.
-whyPaused.replayForcedPause=Paŭzinta en registrado
 
 # LOCALIZATION NOTE (whyPaused.resumeLimit): The text that is displayed
 # in a info block explaining how the debugger is currently paused while stepping
