Pontoon: Update Esperanto (eo) localization of Firefox Co-authored-by: Eduardo Trápani <etrapani@vera.com.uy>

--- a/eo/devtools/client/debugger.properties
+++ b/eo/devtools/client/debugger.properties
@@ -60,28 +60,35 @@ blackBoxAll.label=Nigra skatolo
 
 # LOCALIZATION NOTE (blackBoxAllInGroup.label): This is the text that appears in the
 # context submenu to blackbox all files inside of the selected group
-blackBoxAllInGroup.label=Meti la ĉi grupan dosierojn en nigran skatolon
+blackBoxAllInGroup.label=Meti la ĉi grupajn dosierojn en nigran skatolon
 
 # LOCALIZATION NOTE (unblackBoxAllInGroup.label): This is the text that appears in the
 # context submenu to unblackbox all files inside of the selected group
+unblackBoxAllInGroup.label=Elpreni dosierojn, kiu apartenas al tiu ĉi grupo, el nigra skatolo
 
 # LOCALIZATION NOTE (blackBoxAllOutsideGroup.label): This is the text that appears in the
 # context submenu to blackbox all files outside of the selected group
+blackBoxAllOutsideGroup.label=Meti dosierojn, kiuj ne apartenas al tiu ĉi grupo, en nigran skatolon
 
 # LOCALIZATION NOTE (unblackBoxAllOutsideGroup.label): This is the text that appears in the
 # context submenu to unblackbox all files outside of the selected group
+unblackBoxAllOutsideGroup.label=Elpreni dosierojn ekster tiu ĉi grupo el nigra skatolo
 
 # LOCALIZATION NOTE (blackBoxAllInDir.label): This is the text that appears in the
 # context submenu to blackbox all files inside of the selected directory
+blackBoxAllInDir.label=Meti dosierojn de tiu ĉi dosierujo en nigran skatolon
 
 # LOCALIZATION NOTE (unblackBoxAllInDir.label): This is the text that appears in the
 # context submenu to unblackbox all files inside of the selected directory
+unblackBoxAllInDir.label=Elpreni dosierojn de tiu ĉi dosierujo el nigra skatolo
 
 # LOCALIZATION NOTE (blackBoxAllOutsideDir.label): This is the text that appears in the
 # context submenu to blackbox all files outside of the selected directory
+blackBoxAllOutsideDir.label=Meti dosierojn, kiuj ne apartenas al tiu ĉi dosierujo, en nigran skatolon
 
 # LOCALIZATION NOTE (unblackBoxAllOutsideDir.label: This is the text that appears in the
 # context submenu to unblackbox all files outside of the selected directory
+unblackBoxAllOutsideDir.label=Elpreni dosierojn ekster tiu ĉi dosierujo el nigra skatolo
 
 # LOCALIZATION NOTE (copyFunction.label): This is the text that appears in the
 # context menu to copy the function the user selected
@@ -680,12 +687,15 @@ inlinePreview.show.label=Montri enmetitan antaŭvidon
 inlinePreview.hide.label=Kaŝi enmetitan antaŭvidon
 
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Agordoj de erarseĉilo
 
 # LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
 # label for disabling JavaScript
+settings.disableJavaScript.label=Malŝalti JavaScript
 
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Malŝalti JavaScript (tio ĉi postulas reŝargon)
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
@@ -744,6 +754,7 @@ watchpoints.setWatchpoint=Skribo de atributo
 
 # LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
+watchpoints.getOrSetWatchpoint=Skribo aŭ lego de atributo
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
 # context menu to delete a watchpoint on an object property.
