Pontoon: Update Esperanto (eo) localization of Firefox Co-authored-by: Eduardo Trápani <etrapani@vera.com.uy>

--- a/eo/devtools/client/netmonitor.properties
+++ b/eo/devtools/client/netmonitor.properties
@@ -88,23 +88,23 @@ cookiesFilterText=Filtri kuketojn
 responseEmptyText=Neniu responda datumo havebla por tiu ĉi peto
 
 # LOCALIZATION NOTE (paramsEmptyText): This is the text displayed in the
-# params tab of the network details pane when there are no params available.
+# request tab of the network details pane when there are no params available.
 paramsEmptyText=Neniu parametro por tiu ĉi peto
 
 # LOCALIZATION NOTE (paramsFilterText): This is the text displayed in the
-# params tab of the network details pane for the filtering input.
+# request tab of the network details pane for the filtering input.
 paramsFilterText=Filtri parametrojn de petoj
 
 # LOCALIZATION NOTE (paramsQueryString): This is the label displayed
-# in the network details params tab identifying the query string.
+# in the network details request tab identifying the query string.
 paramsQueryString=Serĉoteksto
 
 # LOCALIZATION NOTE (paramsFormData): This is the label displayed
-# in the network details params tab identifying the form data.
+# in the network details request tab identifying the form data.
 paramsFormData=Datumoj de formularo
 
 # LOCALIZATION NOTE (paramsPostPayload): This is the label displayed
-# in the network details params tab identifying the request payload.
+# in the network details request tab identifying the request payload.
 paramsPostPayload=Korpo de peto
 
 # LOCALIZATION NOTE (requestHeaders): This is the label displayed
@@ -121,11 +121,11 @@ requestHeadersFromUpload=Petaj mesaĝkapo el alŝuta fluo
 responseHeaders=Mesaĝkapoj de respondo
 
 # LOCALIZATION NOTE (requestCookies): This is the label displayed
-# in the network details params tab identifying the request cookies.
+# in the network details request tab identifying the request cookies.
 requestCookies=Kuketoj en peto
 
 # LOCALIZATION NOTE (responseCookies): This is the label displayed
-# in the network details params tab identifying the response cookies.
+# in the network details request tab identifying the response cookies.
 responseCookies=Kuketoj en respondo
 
 # LOCALIZATION NOTE (responsePayload): This is the label displayed
@@ -150,7 +150,7 @@ jsonpScopeName=JSONP → revoko %S()
 responseTruncated=La respondo ne estas kompleta
 
 # LOCALIZATION NOTE (requestTruncated): This is the text displayed
-# in the params tab of the network details pane when the request is over
+# in the request tab of the network details pane when the request is over
 # the truncation limit and thus was truncated.
 requestTruncated=La peto estis trunkita
 
@@ -228,11 +228,6 @@ networkMenu.ws.summary.tooltip.framesCount=Nombro de mesaĝoj
 # LOCALIZATION NOTE (networkMenu.ws.summary.tooltip.framesTotalSize): A tooltip explaining
 # what the framesTotalSize label displays
 networkMenu.ws.summary.tooltip.framesTotalSize=Tuta grando de la montritaj mesaĝoj
-
-# LOCALIZATION NOTE (networkMenu.ws.summary.tooltip.framesTranferredSize): A tooltip explaining
-# what the framesTranferredSize label displays
-# %1$S is the total size of the transferred data, %2$S is the size of sent data, %3$S is the size of received data.
-networkMenu.ws.summary.tooltip.framesTranferredSize=%1$S entute, %2$S senditaj, %3$S ricevitaj
 
 # LOCALIZATION NOTE (networkMenu.ws.summary.label.framesTranferredSize): A label showing
 # summary size info related to the current list of WS messages
@@ -355,6 +350,10 @@ netmonitor.timings.startedAt=Komencita: %S
 # when the request actually finished downloading.
 # %S is time expressed in milliseconds or minutes.
 netmonitor.timings.downloadedAt=Elŝutita: %S
+
+# LOCALIZATION NOTE (netmonitor.timings.noTimings): Message that displays in the
+# timings pane when thea request has been blocked
+netmonitor.timings.noTimings=Neniu tempo por tiu ĉi peto
 
 # LOCALIZATION NOTE (networkMenu.millisecond): This is the label displayed
 # in the network menu specifying timing interval divisions (in milliseconds).
@@ -766,6 +765,14 @@ netmonitor.ws.context.received=Ricevitaj
 # for the "Received" menu item displayed in the context menu in the websocket toolbar.
 netmonitor.ws.context.received.accesskey=R
 
+# LOCALIZATION NOTE (netmonitor.ws.context.controlFrames): This is the label displayed
+# on the context menu that shows "Control Frames" WebSocket frames.
+netmonitor.ws.context.controlFrames=Kontrolo
+
+# LOCALIZATION NOTE (netmonitor.ws.context.controlFrames.accesskey): This is the access key
+# for the "Control Frames" menu item displayed in the context menu in the websocket toolbar.
+netmonitor.ws.context.controlFrames.accesskey=K
+
 # LOCALIZATION NOTE (netmonitor.ws.context.copyFrame): This is the label displayed
 # on the context menu that shows "Copy Message".
 netmonitor.ws.context.copyFrame=Kopii mesaĝon
@@ -785,11 +792,6 @@ netmonitor.ws.type.sent=Senditaj
 # LOCALIZATION NOTE (netmonitor.ws.type.received): This is the label used as
 # accessible text for the "received" type icon in the websocket table's "data" column.
 netmonitor.ws.type.received=Ricevitaj
-
-# LOCALIZATION NOTE (netmonitor.ws.time.format): This is the format used for the
-# time values in the websocket table's "time" column
-# %1$S is the formatted hour-minutes-seconds, %2$S is the milliseconds (zero-padded)
-netmonitor.ws.time.format=%1$S.%2$S
 
 # LOCALIZATION NOTE (netmonitor.ws.rawData.header): This is the label displayed
 # in the messages panel identifying the raw data.
@@ -865,6 +867,18 @@ netmonitor.actionbar.removeBlockedUrl=Forigi ŝablonon
 # tooltip shown over the Add Blocked URL button
 netmonitor.actionbar.addBlockedUrl=Aldoni ŝablonon
 
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.removeAllBlockedUrls): This is the
+# context menu item for removing all blocked URLs
+netmonitor.requestBlockingMenu.removeAllBlockedUrls=Forigi ĉiujn
+
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.enableAllBlockedUrls): This is the
+# context menu item for enabling all blocked URLs
+netmonitor.requestBlockingMenu.enableAllBlockedUrls=Aktivigi ĉiujn
+
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.disableAllBlockedUrls): This is the
+# context menu item for disabling all blocked URLs
+netmonitor.requestBlockingMenu.disableAllBlockedUrls=Malaktivigi ĉiujn
+
 # LOCALIZATION NOTE (netmonitor.actionbar.search): This is the label displayed
 # in the action bar's search tab
 netmonitor.actionbar.search=Serĉi
@@ -906,6 +920,10 @@ netmonitor.tab.cache=Staplo
 # LOCALIZATION NOTE (netmonitor.tab.params): This is the label displayed
 # in the network details pane identifying the params tab.
 netmonitor.tab.params=Parametroj
+
+# LOCALIZATION NOTE (netmonitor.tab.request): This is the label displayed
+# in the network details pane identifying the request tab.
+netmonitor.tab.request=Peto
 
 # LOCALIZATION NOTE (netmonitor.tab.response): This is the label displayed
 # in the network details pane identifying the response tab.
@@ -1027,6 +1045,14 @@ netmonitor.toolbar.resetColumns=Remeti kolumnojn
 # displayed in the network table header context menu to reset sorting
 netmonitor.toolbar.resetSorting=Remeti ordigon
 
+# LOCALIZATION NOTE (netmonitor.toolbar.resizeColumnToFitContent): This is the label
+# displayed in the network table header context menu to resize a column to fit its content
+netmonitor.toolbar.resizeColumnToFitContent=Alĝustigi kolumnon al la enhavo
+
+# LOCALIZATION NOTE (netmonitor.toolbar.resizeColumnToFitContent.title): This is the title
+# tooltip displayed when draggable resizer in network table headers is hovered
+netmonitor.toolbar.resizeColumnToFitContent.title=Alklaki duoble por alĝustigi kolumnon al enhavo
+
 # LOCALIZATION NOTE (netmonitor.toolbar.timings): This is the label
 # displayed in the network table header context menu for the timing submenu
 netmonitor.toolbar.timings=Tempomezuroj
@@ -1035,6 +1061,11 @@ netmonitor.toolbar.timings=Tempomezuroj
 # label displayed in the network table header context menu for the
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=Mesaĝkapoj de respondo
+
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+netmonitor.headers.toolbar.block=Bloki
 
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
@@ -1085,6 +1116,11 @@ netmonitor.summary.rawHeaders.responseHeaders=Mesaĝkapoj de respondo:
 # LOCALIZATION NOTE (netmonitor.summary.size): This is the label displayed
 # in the network details headers tab identifying the headers size.
 netmonitor.summary.size=Grandeco de mesaĝkapoj:
+
+# LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
+# on the button in the headers tab that toggle view for raw request/response headers
+# from the currently displayed request
+netmonitor.headers.raw=Krude
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
@@ -1523,3 +1559,16 @@ netmonitor.cache.lastModified=Laste modifita
 # LOCALIZATION NOTE (netmonitor.cache.device): This is the label text for the device
 # where a cached object was fetched from (e.g. "disk").
 netmonitor.cache.device=Aparato
+
+# LOCALIZATION NOTE (netmonitor.settings.menuTooltip): This is the tooltip that gets displayed
+# when the settings menu button is hovered.
+netmonitor.settings.menuTooltip=Retaj agordoj
+
+# LOCALIZATION NOTE (netmonitor.settings.importHarTooltip): This is the tooltip that gets displayed
+# when the HAR import menu item is hovered
+
+# LOCALIZATION NOTE (netmonitor.settings.saveHarTooltip): This is the tooltip that gets displayed
+# when the HAR save menu item is hovered
+
+# LOCALIZATION NOTE (netmonitor.settings.copyHarTooltip): This is the tooltip that gets displayed
+# when the HAR copy menu item is hovered
