--- a/eo/devtools/client/webconsole.properties
+++ b/eo/devtools/client/webconsole.properties
@@ -192,6 +192,12 @@ webconsole.menu.openInNetworkPanel.accesskey=M
 webconsole.menu.resendNetworkRequest.label=Resendi peton
 webconsole.menu.resendNetworkRequest.accesskey=R
 
+# LOCALIZATION NOTE (webconsole.menu.openNodeInInspector.label)
+# Label used for a context-menu item displayed for DOM Node logs. Clicking on it will 
+# reveal that specific DOM Node in the Inspector.
+webconsole.menu.openNodeInInspector.label=Aperigi en inspektilo
+webconsole.menu.openNodeInInspector.accesskey=A
+
 # LOCALIZATION NOTE (webconsole.menu.storeAsGlobalVar.label)
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # creates a new global variable pointing to the logged variable.
@@ -220,12 +226,30 @@ webconsole.menu.selectAll.accesskey=E
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label=Malfermi en flanka strio
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1=Inspekti objekton en flanka strio
 webconsole.menu.openInSidebar.accesskey=f
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
 # copies the entire output of the console to the clipboard.
 webconsole.menu.exportClipboard.label=Elporti videblajn mesaĝojn al tondujo
+
+# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
+# Label used for a context-menu item displayed for any log. Clicking on it will
+# jump to the execution point where the log item was generated.
+webconsole.menu.timeWarp.label=Salti ĉi tien
+
+# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
+# Label used for the tooltip on the "jump" button in the console. It's displayed when
+# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
+# message in the console output. Clicking on it will jump to the execution point where the
+# log item was generated.
+# Parameters: %S is the level of the message.
+webconsole.jumpButton.tooltip=%S - Salti ĉi tien
 
 # LOCALIZATION NOTE (webconsole.menu.exportSubmenu.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
@@ -242,19 +266,6 @@ webconsole.menu.exportSubmenu.exportCliboard.label=Tondujo
 # opens a file picker to allow the user save a file containing
 # the output of the console.
 webconsole.menu.exportSubmenu.exportFile.label=Dosiero
-
-# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
-# Label used for a context-menu item displayed for any log. Clicking on it will
-# jump to the execution point where the log item was generated.
-webconsole.menu.timeWarp.label=Salti ĉi tien
-
-# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
-# Label used for the tooltip on the "jump" button in the console. It's displayed when
-# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
-# message in the console output. Clicking on it will jump to the execution point where the
-# log item was generated.
-# Parameters: %S is the level of the message.
-webconsole.jumpButton.tooltip=%S - Salti ĉi tien
 
 # LOCALIZATION NOTE (webconsole.clearButton.tooltip)
 # Label used for the tooltip on the clear logs button in the console top toolbar bar.
@@ -385,11 +396,6 @@ webconsole.console.settings.menu.item.autocomplete.tooltip=Se vi aktivigas tiun 
 webconsole.console.settings.menu.item.enablePersistentLogs.label=Persistaj registroj
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.enablePersistentLogs.tooltip)
 webconsole.console.settings.menu.item.enablePersistentLogs.tooltip=Se vi aktivigas tiun ĉi elekteblon, la eligo ne estos viŝita kiam vi iras al nova paĝo
-
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.label)
-webconsole.console.settings.menu.item.eagerEvaluation.label=Avida taksado
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.tooltip)
-webconsole.console.settings.menu.item.eagerEvaluation.tooltip=Se vi aktivigas tiun ĉi elekteblon, la enigo estos avide taksita dum tajpado
 
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.instantEvaluation.label)
 webconsole.console.settings.menu.item.instantEvaluation.label=Tuja taksado
@@ -586,3 +592,8 @@ webconsole.input.selector.top=Supre
 # shown when users select a thread that they want to evaluate an
 # expression for.
 webconsole.input.selector.tooltip=Elekti taksan kuntekston
+
+# LOCALIZATION NOTE (webconsole.group.cookieSameSiteLaxByDefaultEnabled): do not translate 'sameSite'.
+webconsole.group.cookieSameSiteLaxByDefaultEnabled=Kelkaj kuketoj malĝuste uzas la atributon “sameSite“, do tio ne funkcios kiel atendite
+# LOCALIZATION NOTE (webconsole.group.cookieSameSiteLaxByDefaultDisabled): do not translate 'sameSite'.
+webconsole.group.cookieSameSiteLaxByDefaultDisabled=Kelkaj kuketoj malĝuste uzas la rekomenditan atributon “sameSite“
