Pontoon: Update Esperanto (eo) localization of Firefox Co-authored-by: Eduardo Trápani <etrapani@vera.com.uy>

--- a/eo/devtools/client/netmonitor.properties
+++ b/eo/devtools/client/netmonitor.properties
@@ -1566,9 +1566,12 @@ netmonitor.settings.menuTooltip=Retaj agordoj
 
 # LOCALIZATION NOTE (netmonitor.settings.importHarTooltip): This is the tooltip that gets displayed
 # when the HAR import menu item is hovered
+netmonitor.settings.importHarTooltip=Enporti dosieron HAR kun retaj datumoj
 
 # LOCALIZATION NOTE (netmonitor.settings.saveHarTooltip): This is the tooltip that gets displayed
 # when the HAR save menu item is hovered
+netmonitor.settings.saveHarTooltip=Konservi retajn datumon en dosiero HAR
 
 # LOCALIZATION NOTE (netmonitor.settings.copyHarTooltip): This is the tooltip that gets displayed
 # when the HAR copy menu item is hovered
+netmonitor.settings.copyHarTooltip=Kopii retajn datumojn al tondujo
