--- a/eo/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/eo/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Ĝisdatigi
 updateLoginButtonAccessKey = d
 updateLoginButtonDeny.label = Ne ĝisdatigi
 updateLoginButtonDeny.accesskey = N
+updateLoginButtonDelete.label = Forigi konservitan akreditilon
+updateLoginButtonDelete.accesskey = F
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
