Pontoon: Update Esperanto (eo) localization of Firefox Co-authored-by: Eduardo Trápani <etrapani@vera.com.uy>

--- a/eo/dom/chrome/security/security.properties
+++ b/eo/dom/chrome/security/security.properties
@@ -63,6 +63,7 @@ InsecurePasswordsPresentOnIframe=Password fields present on an insecure (http://
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 LoadingMixedActiveContent2=Loading mixed (insecure) active content "%1$S" on a secure page
 LoadingMixedDisplayContent2=Loading mixed (insecure) display content "%1$S" on a secure page
+LoadingMixedDisplayObjectSubrequestDeprecation=Ŝargado de miksita (nesekura) enhavo “%1$S” ene de kromprogramo, en sekura paĝo, estas evitinda kaj estos baldaŭ blokita.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=An iframe which has both allow-scripts and allow-same-origin for its sandbox attribute can remove its sandboxing.
 
@@ -146,3 +147,16 @@ XFOInvalid = Nevalida X-Frame-Options: “%1$S” mesaĝkapo el “%2$S” ŝarg
 XFODeny = Ŝargado rifuzita de X-Frame-Options: “%1$S” el “%2$S”, retejo ne permesas iajn ajn kadrojn. Klopodo ŝargi ĝin en “%3$S”.
 # LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
 XFOSameOrigin = Ŝargado rifuzita de X-Frame-Options: “%1$S” el “%2$S”, retejo ne permesas pluroriginajn kadrojn el “%3$S”.
+
+# X-Frame-Options
+# LOCALIZATION NOTE(XFrameOptionsInvalid): %1$S is the header value, %2$S is frame URI. Do not translate "X-Frame-Options".
+XFrameOptionsInvalid = Nevalida mesaĝkapo X-Frame-Options trovita dum la ŝargado de “%2$S”:“%1$S” ne estas valida direktivo.
+# LOCALIZATION NOTE(XFrameOptionsDeny): %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI. Do not translate "X-Frame-Options".
+XFrameOptionsDeny=La ŝargado de “%2$S” en kadro estas rifuzita de la direktivo “X-Frame-Options“, kies valoro estas “%1$S“.
+
+# HTTPS-Only Mode
+# LOCALIZATION NOTE: %1$S is the URL of the upgraded request; %2$S is the upgraded scheme.
+HTTPSOnlyUpgradeRequest = Modifo de nesekura peto “%1$S”, ĝi nun uzos “%2$S”.
+# LOCALIZATION NOTE: %1$S is the URL of request.
+HTTPSOnlyNoUpgradeException = Ne eblas modifi nesekuran peton “%1$S” ĉar ĝi estas sendevigata.
+# LOCALIZATION NOTE: %1$S is the URL of the failed request; %2$S is an error-code.
