Pontoon: Update Esperanto (eo) localization of Firefox Co-authored-by: Eduardo Trápani <etrapani@vera.com.uy>

--- a/eo/devtools/client/jsonview.properties
+++ b/eo/devtools/client/jsonview.properties
@@ -32,6 +32,8 @@ jsonViewer.Copy=Kopii
 # LOCALIZATION NOTE (jsonViewer.ExpandAll): Label for expanding all nodes
 jsonViewer.ExpandAll=Malfaldi ĉion
 
+jsonViewer.ExpandAllSlow=Malfaldi ĉion (malrapide)
+
 # LOCALIZATION NOTE (jsonViewer.CollapseAll): Label for collapsing all nodes
 jsonViewer.CollapseAll=Faldi ĉion
 
