--- a/eo/dom/chrome/accessibility/mac/accessible.properties
+++ b/eo/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       ĉefa
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      alarmo
 alertDialog =      dialogo de alarmo
+dialog      =      dialogo
 article     =      artikolo
 document    =      dokumento
 # The (spoken) role description for the WAI-ARIA figure role
@@ -58,3 +59,7 @@ separator    =      apartigilo
 tabPanel     =      langeta panelo
 # The roleDescription for the html:mark element
 highlight = elstarigo
+# The roleDescription for the details element
+details = detaloj
+# The roleDescription for the summary element
+summary = resumo
