--- a/eo/dom/chrome/security/security.properties
+++ b/eo/dom/chrome/security/security.properties
@@ -160,3 +160,4 @@ HTTPSOnlyUpgradeRequest = Modifo de nesekura peto “%1$S”, ĝi nun uzos “%2
 # LOCALIZATION NOTE: %1$S is the URL of request.
 HTTPSOnlyNoUpgradeException = Ne eblas modifi nesekuran peton “%1$S” ĉar ĝi estas sendevigata.
 # LOCALIZATION NOTE: %1$S is the URL of the failed request; %2$S is an error-code.
+HTTPSOnlyFailedRequest = Modifo de nesekura peto “%1$S” malsukesa. (%2$S)
