--- a/eo/netwerk/necko.properties
+++ b/eo/netwerk/necko.properties
@@ -57,6 +57,9 @@ CookieAllowedForOriginOnTrackerByHeuristic=Aliro al al konservejo estis aŭtomat
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=Aliro al al konservejo estis aŭtomate permesita por la spurilo “%2$S” en “%1$S”.
 
+# LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForFpiByHeuristic=Aliro al la konservo estis aŭtomate permesita pro la izolado de rimedoj el la sama fonto “%2$S” en “%1$S”.
+
 # LOCALIZATION NOTE(CookieRejectedNonRequiresSecure): %1$S is the cookie name. Do not localize "sameSite=none" and "secure".
 CookieRejectedNonRequiresSecure=La kuketo “%1$S” estis rifuzita ĉar ĝi havas la atributon “sameSite=none” sed mankas al ĝi la atributon “secure”.
 # LOCALIZATION NOTE(CookieRejectedNonRequiresSecureForBeta): %1$S is the cookie name. %2$S is a URL. Do not localize "sameSite", "sameSite=none" and "secure".
@@ -67,3 +70,7 @@ CookieLaxForced=La kuketo “%1$S” havas la politikon “lax” por la atribut
 CookieLaxForcedForBeta=La kuketo “%1$S” ne havas taŭgan valoron por la atributo “sameSite”. Baldaŭ, kuketoj sen atributo “sameSite” aŭ kun nevalida valoro estos pritraktitaj kvazaŭ ili havus la politikon  “lax”. Tio signifas ke la kuketo ne plu estos sendita en nerektaj kuntekstoj. Se via programo dependas de la disponeblo de tiu kuketo en tiaj kuntekstoj, bonvolu aldoni  “sameSite=none“ al ĝi. Por havi pli da informo pri la atributo “sameSite“, vizitu %2$S
 # LOCALIZATION NOTE: %1$S is cookie name. Do not localize "sameSite", "lax", "strict" and "none"
 CookieSameSiteValueInvalid=Nevalida valoro de “sameSite“ por la kuketo “%1$S”. La subtenataj valoroj estas: “lax“, “strict“, “none“.
+# LOCALIZATION NOTE (CookieOversize): %1$S is the cookie name. %2$S is the number of bytes. "B" means bytes.
+CookieOversize=La kuketo “%1$S” ne validas ĉar ĝi estas tro granda. La maksimuma grando estas %2$S O.
+# LOCALIZATION NOTE (CookiePathOversiz): %1$S is the cookie name. %2$S is the number of bytes. "B" means bytes.
+CookiePathOversize=La kuketo “%1$S” ne validas ĉar ĝi tro grandas. La maksimuma grando estas %2$S O.
