--- a/eo/devtools/shared/screenshot.properties
+++ b/eo/devtools/shared/screenshot.properties
@@ -114,3 +114,19 @@ inspectNodeDesc=Elektilo de CSS
 # parameter to the 'inspect' command. Displayed when the --help flag is
 # passed to the `screenshot command.
 inspectNodeManual=Elektilo CSS por uzi kun document.querySelector kaj kiu identigas unuopan elementon
+
+# LOCALIZATION NOTE (screenshotTruncationWarning) Text displayed to user when the image
+# that would be created by the screenshot is too big and needs to be truncated to avoid
+# errors.
+# The first parameter is the width of the final image and the second parameter is the
+# height of the image.
+screenshotTruncationWarning=La bildo estis reduktita al %1$S×%2$S ĉar la rezulta bildo estis tro granda
+
+# LOCALIZATION NOTE (screenshotDPRDecreasedWarning) Text displayed to user when the
+# screenshot they want to take is for the full page and the Device Pixel Ratio is
+# decreased to 1, to avoid creating images that are too big which may cause errors.
+screenshotDPRDecreasedWarning=La proporcio de bilderoj de la aparato estis reduktita al 1 ĉar la rezulta bildo estis tro granda
+
+# LOCALIZATION NOTE (screenshotRenderingError) Text displayed to user upon
+# encountering an error while rendering the screenshot. This most often happens when the
+# resulting image is too large to be rendered.
