Pontoon: Update Esperanto (eo) localization of Firefox Co-authored-by: Eduardo Trápani <etrapani@vera.com.uy>

--- a/eo/devtools/shared/screenshot.properties
+++ b/eo/devtools/shared/screenshot.properties
@@ -130,3 +130,4 @@ screenshotDPRDecreasedWarning=La proporcio de bilderoj de la aparato estis reduk
 # LOCALIZATION NOTE (screenshotRenderingError) Text displayed to user upon
 # encountering an error while rendering the screenshot. This most often happens when the
 # resulting image is too large to be rendered.
+screenshotRenderingError=Eraro dum kreado de la bildo. La rezulta bildo estis verŝajne tro granda.
