--- a/eo/browser/installer/nsisstrings.properties
+++ b/eo/browser/installer/nsisstrings.properties
@@ -9,12 +9,6 @@
 # Accesskeys are defined by prefixing the letter that is to be used for the
 # accesskey with an ampersand (e.g. &).
 
-# Do not replace $BrandShortName, $BrandFullName, or $BrandFullNameDA with a
-# custom string and always use the same one as used by the en-US files.
-# $BrandFullNameDA allows the string to contain an ampersand (e.g. DA stands
-# for double ampersand) and prevents the letter following the ampersand from
-# being used as an accesskey.
-
 # Do not replace $BrandShortName, $BrandProductName, $BrandFullName,
 # or $BrandFullNameDA with a custom string and always use the same one as used
 # by the en-US files.
@@ -27,16 +21,15 @@
 
 INSTALLER_WIN_CAPTION=Instalilo de $BrandShortName
 
-# The \n in the next two strings can be moved or deleted as needed to make
-# the string fit in the 3 lines of space available.
-STUB_CLEANUP_PAVEOVER_HEADER=$BrandShortName jam estas instalita.\nNi ĝisdatigu ĝin.
-STUB_CLEANUP_REINSTALL_HEADER=$BrandShortName estis antaŭe instalita.\nNi ricevu novan kopion por vi.
-
 STUB_CLEANUP_PAVEOVER_HEADER2=$BrandShortName jam estas instalita.\nNi ĝisdatigu ĝin.
 STUB_CLEANUP_REINSTALL_HEADER2=$BrandShortName estis antaŭe instalita.\nNi ricevu novan kopion por vi.
 STUB_CLEANUP_PAVEOVER_BUTTON=Ĝis&datigi
 STUB_CLEANUP_REINSTALL_BUTTON=Re&instali
 STUB_CLEANUP_CHECKBOX_LABEL=&Remeti la normajn agordojn kaj forigi malnovajn aldonaĵojn por optima efikeco
+
+STUB_CLEANUP_PAVEOVER_BUTTON2=Ĝisdatigi
+STUB_CLEANUP_REINSTALL_BUTTON2=Reinstali
+STUB_CLEANUP_CHECKBOX_LABEL2=Remeti normajn agordojn kaj forigi malnovajn aldonaĵojn por optimuma efikeco
 
 STUB_INSTALLING_LABEL2=Nuna instalo…
 # The \n in the next string is intended to force a nice-looking layout in en-US
@@ -44,6 +37,8 @@ STUB_INSTALLING_LABEL2=Nuna instalo…
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Igu vian privatecon la plej grava afero.\nVenu al $BrandProductName.
 STUB_INSTALLING_BODY=Ricevu la ceteron de niaj produktoj, por kiuj viaj privateco estas la plej grava afero, kaj lernu kiel retumi pli inteligente kaj pli sekure.
+STUB_INSTALLING_HEADLINE2=Optimumigo de viaj agordoj por rapideco, privateco kaj sekureco.
+STUB_INSTALLING_BODY2=$BrandShortName baldaŭ pretos.
 STUB_BLURB_FIRST1=La ĝisnune plej respondema kaj rapida $BrandShortName
 STUB_BLURB_SECOND1=Pli rapida ŝargado kaj transiro inter langetoj
 STUB_BLURB_THIRD1=Pli pova privata retumo
