--- a/de/devtools/shared/screenshot.properties
+++ b/de/devtools/shared/screenshot.properties
@@ -120,12 +120,12 @@ inspectNodeManual=Ein CSS-Selektor zur Verwendung mit document.querySelector, de
 # errors.
 # The first parameter is the width of the final image and the second parameter is the
 # height of the image.
-screenshotTruncationWarning=Bildschirmfoto wurde abgeschnitten, weil die verbleibende Grafik zu groß war. Verbleibende Größe: %1$S×%2$S
+screenshotTruncationWarning=Bildschirmfoto wurde abgeschnitten, weil die erzeugte Grafik zu groß war. Verbleibende Größe: %1$S×%2$S
 
 # LOCALIZATION NOTE (screenshotDPRDecreasedWarning) Text displayed to user when the
 # screenshot they want to take is for the full page and the Device Pixel Ratio is
 # decreased to 1, to avoid creating images that are too big which may cause errors.
-screenshotDPRDecreasedWarning=Das Gerät-Pixel-Verhältnis (Device Pixel Ratio) wurde auf 1 herabgesetzt, weil die Grafik zu groß war.
+screenshotDPRDecreasedWarning=Das Gerät-Pixel-Verhältnis (Device Pixel Ratio) wurde auf 1 herabgesetzt, weil die erzeugte Grafik zu groß war.
 
 # LOCALIZATION NOTE (screenshotRenderingError) Text displayed to user upon
 # encountering an error while rendering the screenshot. This most often happens when the
