--- a/th/browser/installer/nsisstrings.properties
+++ b/th/browser/installer/nsisstrings.properties
@@ -29,6 +29,7 @@ STUB_CLEANUP_CHECKBOX_LABEL=เ&รียกคืนการตั้งค่
 
 STUB_CLEANUP_PAVEOVER_BUTTON2=ปรับปรุง
 STUB_CLEANUP_REINSTALL_BUTTON2=ติดตั้งใหม่
+STUB_CLEANUP_CHECKBOX_LABEL2=เรียกคืนการตั้งค่าเริ่มต้นและเอาส่วนเสริมเก่าออกเพื่อประสิทธิภาพที่ดีที่สุด
 
 STUB_INSTALLING_LABEL2=ขณะนี้กำลังติดตั้ง…
 # The \n in the next string is intended to force a nice-looking layout in en-US
