Pontoon: Update Thai (th) localization of Firefox Co-authored-by: niruhn <niruhn@gmail.com> Co-authored-by: aefgh39622@gmail.com <aefgh39622@gmail.com>

--- a/th/devtools/client/netmonitor.properties
+++ b/th/devtools/client/netmonitor.properties
@@ -1065,6 +1065,7 @@ netmonitor.toolbar.responseHeaders=ส่วนหัวการตอบสน
 # LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
 # label displayed in the network details headers tab identifying the
 # block url toolbar button.
+netmonitor.headers.toolbar.block=ปิดกั้น
 
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
@@ -1119,6 +1120,7 @@ netmonitor.summary.size=ขนาดส่วนหัว:
 # LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
 # on the button in the headers tab that toggle view for raw request/response headers
 # from the currently displayed request
+netmonitor.headers.raw=ดิบ
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
@@ -1564,9 +1566,12 @@ netmonitor.settings.menuTooltip=การตั้งค่าเครือข
 
 # LOCALIZATION NOTE (netmonitor.settings.importHarTooltip): This is the tooltip that gets displayed
 # when the HAR import menu item is hovered
+netmonitor.settings.importHarTooltip=นำเข้าไฟล์ HAR ของข้อมูลเครือข่าย
 
 # LOCALIZATION NOTE (netmonitor.settings.saveHarTooltip): This is the tooltip that gets displayed
 # when the HAR save menu item is hovered
+netmonitor.settings.saveHarTooltip=บันทึกข้อมูลเครือข่ายเป็นไฟล์ HAR
 
 # LOCALIZATION NOTE (netmonitor.settings.copyHarTooltip): This is the tooltip that gets displayed
 # when the HAR copy menu item is hovered
+netmonitor.settings.copyHarTooltip=คัดลอกข้อมูลเครือข่ายไปยังคลิปบอร์ด
