Pontoon: Update Thai (th) localization of Firefox Co-authored-by: niruhn <niruhn@gmail.com> Co-authored-by: aefgh39622@gmail.com <aefgh39622@gmail.com>

--- a/th/devtools/client/webconsole.properties
+++ b/th/devtools/client/webconsole.properties
@@ -230,6 +230,7 @@ webconsole.menu.openInSidebar.label=เปิดในแถบข้าง
 # LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1=ตรวจสอบวัตถุในแถบด้านข้าง
 webconsole.menu.openInSidebar.accesskey=น
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
@@ -593,4 +594,6 @@ webconsole.input.selector.top=ด้านบน
 webconsole.input.selector.tooltip=เลือกบริบทการประเมิน
 
 # LOCALIZATION NOTE (webconsole.group.cookieSameSiteLaxByDefaultEnabled): do not translate 'sameSite'.
+webconsole.group.cookieSameSiteLaxByDefaultEnabled=คุกกี้บางส่วนใช้แอตทริบิวต์ “SameSite” ในทางที่ผิด ดังนั้นคุกกี้เหล่านั้นจะไม่ทำงานอย่างที่คาดคิด
 # LOCALIZATION NOTE (webconsole.group.cookieSameSiteLaxByDefaultDisabled): do not translate 'sameSite'.
+webconsole.group.cookieSameSiteLaxByDefaultDisabled=คุกกี้บางส่วนใช้แอตทริบิวต์ “SameSite” ที่แนะนำในทางที่ผิด
