--- a/th/dom/chrome/dom/dom.properties
+++ b/th/dom/chrome/dom/dom.properties
@@ -424,3 +424,5 @@ MathML_DeprecatedStyleAttributeWarning=แอตทริบิวต์ MathML 
 MathML_DeprecatedXLinkAttributeWarning=แอตทริบิวต์ XLink “href”, “type”, “show” และ “actuate” เลิกใช้แล้วบนองค์ประกอบ MathML และจะถูกเอาออกในอนาคต
 WebShareAPI_Failed=การดำเนินการแบ่งปันล้มเหลว
 WebShareAPI_Aborted=การดำเนินการแบ่งปันถูกยกเลิก
+# LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
+UnknownProtocolNavigationPrevented=ป้องกันการนำทางไปยัง “%1$S” แล้วเนื่องจากเป็นโปรโตคอลที่ไม่รู้จัก
