--- a/th/dom/chrome/layout/css.properties
+++ b/th/dom/chrome/layout/css.properties
@@ -180,5 +180,7 @@ PEMoreThanOneGridRepeatAutoFillInNameList=อนุญาตให้มี repe
 PEMoreThanOneGridRepeatAutoFillFitInTrackList=อนุญาตให้มี repeat(auto-fill, …) หรือ repeat(auto-fit, …) ได้เพียงรายการเดียวในรายการแทร็ก
 PEMoreThanOneGridRepeatTrackSize=อนุญาตให้มีขนาดแทร็กเพียงขนาดเดียวเท่านั้นภายใน repeat(auto-fit/auto-fill, …)
 
+PEDisallowedImportRule=กฎ @import ยังไม่สามารถใช้ได้ในสไตล์ชีตที่สร้างขึ้น
+
 TooLargeDashedRadius=รัศมีเส้นขอบใหญ่เกินไปสำหรับสไตล์ ‘dashed’ (ขีดจำกัดคือ 100000px) จึงแสดงผลแบบ solid
 TooLargeDottedRadius=รัศมีเส้นขอบใหญ่เกินไปสำหรับสไตล์ ‘dotted’ (ขีดจำกัดคือ 100000px) จึงแสดงผลแบบ solid
