--- a/th/dom/chrome/security/security.properties
+++ b/th/dom/chrome/security/security.properties
@@ -149,7 +149,9 @@ XFOSameOrigin = การโหลดถูกปฏิเสธโดย X-Fram
 
 # X-Frame-Options
 # LOCALIZATION NOTE(XFrameOptionsInvalid): %1$S is the header value, %2$S is frame URI. Do not translate "X-Frame-Options".
+XFrameOptionsInvalid = พบส่วนหัว X-Frame-Options ที่ไม่ถูกต้องเมื่อโหลด “%2$S”: “%1$S” ไม่ใช่คำสั่งที่ใช้ได้
 # LOCALIZATION NOTE(XFrameOptionsDeny): %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI. Do not translate "X-Frame-Options".
+XFrameOptionsDeny=การโหลด “%2$S” ในเฟรมถูกปฏิเสธโดยคำสั่ง “X-Frame-Options“ ที่กำหนดเป็น “%1$S“
 
 # HTTPS-Only Mode
 # LOCALIZATION NOTE: %1$S is the URL of the upgraded request; %2$S is the upgraded scheme.
