--- a/th/devtools/shared/screenshot.properties
+++ b/th/devtools/shared/screenshot.properties
@@ -114,3 +114,20 @@ inspectNodeDesc=ตัวเลือก CSS
 # parameter to the 'inspect' command. Displayed when the --help flag is
 # passed to the `screenshot command.
 inspectNodeManual=CSS selector สำหรับใช้กับ Document.querySelector เพื่อระบุวัตถุเดี่ยว
+
+# LOCALIZATION NOTE (screenshotTruncationWarning) Text displayed to user when the image
+# that would be created by the screenshot is too big and needs to be truncated to avoid
+# errors.
+# The first parameter is the width of the final image and the second parameter is the
+# height of the image.
+screenshotTruncationWarning=ภาพถูกตัดออกเป็น %1$S×%2$S เนื่องจากภาพที่ได้มีขนาดใหญ่เกินไป
+
+# LOCALIZATION NOTE (screenshotDPRDecreasedWarning) Text displayed to user when the
+# screenshot they want to take is for the full page and the Device Pixel Ratio is
+# decreased to 1, to avoid creating images that are too big which may cause errors.
+screenshotDPRDecreasedWarning=อัตราส่วนพิกเซลของอุปกรณ์ถูกลดลงเป็น 1 เนื่องจากภาพที่ได้มีขนาดใหญ่เกินไป
+
+# LOCALIZATION NOTE (screenshotRenderingError) Text displayed to user upon
+# encountering an error while rendering the screenshot. This most often happens when the
+# resulting image is too large to be rendered.
+screenshotRenderingError=เกิดข้อผิดพลาดในการสร้างภาพ ภาพที่ได้อาจมีขนาดใหญ่เกินไป
