--- a/th/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/th/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -5,9 +5,10 @@
 # LOCALIZATION NOTE: These strings are used for startup/profile problems and the profile manager.
 
 # Application not responding
-# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
+# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker2, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
 restartTitle=ปิด %S
 restartMessageNoUnlocker=%S กำลังทำงานอยู่ แต่ไม่ตอบสนอง เพื่อเปิดหน้าต่างใหม่ คุณต้องปิดโปรเซส %S ก่อน หรือเริ่มการทำงานระบบของคุณใหม่
+restartMessageNoUnlocker2=%S กำลังทำงานอยู่แล้ว แต่ไม่ตอบสนอง หากต้องการใช้ %S คุณต้องปิดกระบวนการ %S ที่มีอยู่ก่อน แล้วเริ่มการทำงานของอุปกรณ์ของคุณใหม่ หรือใช้โปรไฟล์อื่น
 restartMessageUnlocker=%S กำลังทำงานอยู่ แต่ไม่มีการตอบสนอง จำเป็นต้องปิดการทำงานของ %S ก่อนที่จะเปิดหน้าต่างใหม่ได้
 restartMessageNoUnlockerMac=มี %S เปิดใช้งานอยู่ คุณสามารถเปิดใช้งาน %S ได้ครั้งละหนึ่งตัว
 restartMessageUnlockerMac=มี %S เปิดใช้งานอยู่ %S ที่กำลังทำงานอยู่จะถูกปิดเพื่อเปิดให้ตัวนี้ทำงาน
