Pontoon: Update Ukrainian (uk) localization of Firefox Co-authored-by: Artem Polivanchuk <a.polivanchuk@outlook.com>

--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -28,7 +28,7 @@ contextMenuPrivateSearchOtherEngine.accesskey=ш
 
 bookmarkAllTabsDefault=[Назва теки]
 
-xpinstallPromptMessage=%S заблокував запит на встановлення програмного забезпечення з цього сайта на ваш комп’ютер
+xpinstallPromptMessage=%S заблокував запит на встановлення програмного забезпечення з цього сайту на ваш комп’ютер.
 # LOCALIZATION NOTE (xpinstallPromptMessage.header)
 # The string contains the hostname of the site the add-on is being installed from.
 xpinstallPromptMessage.header=Дозволити %S встановити додаток?
@@ -259,7 +259,7 @@ addonLocalInstallError-5=Цей додаток не може бути встан
 addonInstallErrorIncompatible=%3$S не вдалося встановити через його несумісність з %1$S %2$S.
 
 # LOCALIZATION NOTE (addonInstallErrorBlocklisted): %S is add-on name
-addonInstallErrorBlocklisted=%S не вдалося встановити через велику ймовірність того, що він може спричинити проблеми з безпекою та стабільністю..
+addonInstallErrorBlocklisted=%S не може бути встановлений через велику ймовірність спричинення проблем безпеки та стабільності.
 
 unsignedAddonsDisabled.message=Один чи більше встановлених додатків не можуть бути перевірені і тому були вимкнені.
 unsignedAddonsDisabled.learnMore.label=Докладніше
