--- a/uk/devtools/client/netmonitor.properties
+++ b/uk/devtools/client/netmonitor.properties
@@ -215,7 +215,7 @@ networkMenu.summary.tooltip.finish=Загальний час, потрібний
 # LOCALIZATION NOTE (networkMenu.ws.summary.framesCount2): This label is displayed
 # in the messages table footer providing the number of frames
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-networkMenu.ws.summary.framesCount2=Одне повідомлення;#1 повідомлення;#1 повідомлень
+networkMenu.ws.summary.framesCount2=#1 повідомлення;#1 повідомлення;#1 повідомлень
 
 # LOCALIZATION NOTE (networkMenu.ws.summary.framesCountEmpty): This label is displayed
 # in the messages table footer when there are no frames
