[S] devtools: Bug 1596091 - RFC: Adding drag and drop feature to block URL in netmonitor

--- a/it/devtools/client/netmonitor.properties
+++ b/it/devtools/client/netmonitor.properties
@@ -202,6 +202,8 @@ netmonitor.actionbar.requestBlocking2 = Blocco
 netmonitor.actionbar.enableBlocking = Attiva blocco richieste
 netmonitor.actionbar.blockSearchPlaceholder = Blocca risorsa quando l’URL contiene
 netmonitor.actionbar.removeBlockedUrl = Elimina criterio
+netmonitor.actionbar.requestBlockingUsageNotice = Aggiungi qui dei criteri URL per bloccare le richieste corrispondenti.
+netmonitor.actionbar.requestBlockingAddNotice = Inizia aggiungendo un criterio o trascinando una riga dalla tabella con i dati della rete.
 netmonitor.requestBlockingMenu.removeAllBlockedUrls = Rimuovi tutti
 netmonitor.requestBlockingMenu.enableAllBlockedUrls = Attiva tutti
 netmonitor.requestBlockingMenu.disableAllBlockedUrls = Disattiva tutti
