--- a/be/devtools/client/performance.properties
+++ b/be/devtools/client/performance.properties
@@ -149,7 +149,7 @@ recordings.stop=Спыніць запіс прадукцыйнасці
 
 # LOCALIZATION NOTE (recordings.start.tooltip):
 # This string is displayed as a tooltip on a button that starts a new profile.
-recordings.start.tooltip=Уключае рэжым запісу прадукцыйнасці.
+recordings.start.tooltip=Пераключыць рэжым запісу прадукцыйнасці.
 
 # LOCALIZATION NOTE (recordings.import.tooltip):
 # This string is displayed on a button that opens a dialog to import a saved profile data file.
