Pontoon: Update Romansh (rm) localization of Firefox Co-authored-by: Martin <mcmartin@gmx.ch> Co-authored-by: Gion-Andri Cantieni <gion-andri@gmx.ch>

--- a/rm/browser/installer/nsisstrings.properties
+++ b/rm/browser/installer/nsisstrings.properties
@@ -27,12 +27,18 @@ STUB_CLEANUP_PAVEOVER_BUTTON=&Actualisar
 STUB_CLEANUP_REINSTALL_BUTTON=Re&installar
 STUB_CLEANUP_CHECKBOX_LABEL=&Restaurar ils parameters da standard ed allontanar supplements vegls per ina prestaziun optimala
 
+STUB_CLEANUP_PAVEOVER_BUTTON2=Actualisar
+STUB_CLEANUP_REINSTALL_BUTTON2=Reinstallar
+STUB_CLEANUP_CHECKBOX_LABEL2=Restaurar ils parameters da standard ed allontanar supplements vegls per ina prestaziun optimala
+
 STUB_INSTALLING_LABEL2=Vegn installà…
 # The \n in the next string is intended to force a nice-looking layout in en-US
 # and can be moved or deleted as needed. There's no practical limit on the
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Protecziun da datas ha l'emprima prioritad.\nFa part da $BrandProductName.
 STUB_INSTALLING_BODY=Va per ulteriurs products da nossa paletta che dattan l'emprima prioritad a la protecziun da datas e ve a savair co ta mover online a moda pli furbra e segira.
+STUB_INSTALLING_HEADLINE2=Optimar tes parameters per prestaziun, protecziun da datas e segirezza optimala.
+STUB_INSTALLING_BODY2=$BrandShortName è pront en pauc mument.
 STUB_BLURB_FIRST1=La versiun la pli sperta e reactiva da $BrandShortName
 STUB_BLURB_SECOND1=Chargiar paginas e midar tabs va pli spert
 STUB_BLURB_THIRD1=In modus privat rinforzà
