--- a/rm/dom/chrome/accessibility/AccessFu.properties
+++ b/rm/dom/chrome/accessibility/AccessFu.properties
@@ -130,6 +130,8 @@ main           =       principal
 navigation     =       navigaziun
 search         =       tschertgar
 
+region         =       regiun
+
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
