--- a/rm/dom/chrome/accessibility/mac/accessible.properties
+++ b/rm/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       principal
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      avertiment
 alertDialog =      dialog d'avertiment
+dialog      =      dialog
 article     =      artitgel
 document    =      document
 # The (spoken) role description for the WAI-ARIA figure role
@@ -58,3 +59,7 @@ separator    =      separader
 tabPanel     =      panela da tabs
 # The roleDescription for the html:mark element
 highlight = marcà
+# The roleDescription for the details element
+details = detagls
+# The roleDescription for the summary element
+summary = resumaziun
