--- a/rm/browser/chrome/browser/browser.properties
+++ b/rm/browser/chrome/browser/browser.properties
@@ -440,7 +440,6 @@ newWindowButton.tooltip=Avrir ina nova fanestra (%S)
 newTabButton.tooltip=Avrir in nov tab (%S)
 
 newTabContainer.tooltip=Avrir in nov tab (%S)\nSmatgar e tegnair per avrir in nov tab da container
-
 newTabAlwaysContainer.tooltip=Tscherna in container per avrir in nov tab
 
 # Offline web applications
@@ -701,6 +700,8 @@ protections.blocking.trackingContent.title=Bloccà cuntegn che fastizescha
 protections.blocking.socialMediaTrackers.title=Bloccà fastizaders da medias socialas
 protections.notBlocking.fingerprinters.title=Betg bloccà improntaders
 protections.notBlocking.cryptominers.title=Betg bloccà criptominiers
+protections.notBlocking.cookies.3rdParty.title=Nagina bloccada da cookies da terzas partidas
+protections.notBlocking.cookies.all.title=Nagina bloccada da cookies
 protections.notBlocking.crossSiteTrackingCookies.title=Betg bloccà cookies che fastizeschan tranter websites
 protections.notBlocking.trackingContent.title=Betg bloccà cuntegn che fastizescha
 protections.notBlocking.socialMediaTrackers.title=Betg bloccà fastizaders da medias socialas
@@ -1207,14 +1208,6 @@ storageAccess.DontAllow.accesskey = B
 # %2$S is the name of the site URL (www.site2.example) that the user is visiting.  This is the same domain name displayed in the address bar.
 storageAccess.message = Permetter a %1$S da fastizar tias activitads da navigaziun en %2$S?
 
-# LOCALIZATION NOTE (storageAccess.description.label):
-# %1$S is the name of the site URL (www.site1.example) trying to track the user's activity.
-# %2$S will be replaced with the localized version of storageAccess.description.learnmore.  This text will be converted into a hyper-link linking to the SUMO page explaining the concept of third-party trackers.
-storageAccess.description.label = Ti pos bloccar %1$S sin questa website sche ti n'enconuschas betg l'adressa e na ta fidas betg dad ella. Ulteriuras infurmaziuns davart %2$S
-# LOCALIZATION NOTE (storageAccess.description.learnmore):
-# The value of this string is embedded inside storageAccess.description.label.  See the localization note for storageAccess.description.label.
-storageAccess.description.learnmore = fastizaders da terzas partidas
-
 # LOCALIZATION NOTE (storageAccess2.message):
 # %1$S is the name of the site URL (www.site1.example) trying to track the user's activity.
 # %2$S is the name of the site URL (www.site2.example) that the user is visiting.  This is the same domain name displayed in the address bar.
@@ -1229,9 +1222,14 @@ confirmationHint.pinTab.label = Fixà!
 confirmationHint.pinTab.description = Cliccar cun la tasta dretga per betg pli fixar il tab.
 
 confirmationHint.passwordSaved.label = Memorisà il pled-clav!
+confirmationHint.loginRemoved.label = Allontanà l'infurmaziun d'annunzia!
 confirmationHint.breakageReport.label = Tramess il rapport. Grazia!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
 # Used by the export of user's live bookmarks to an OPML file as a title for the file.
 # %S will be replaced with brandShortName
 livebookmarkMigration.title                      = Segnapaginas dinamics da %S
+
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
+gnomeSearchProviderSearch=Tschertgar %S en il web
