--- a/rm/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/rm/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Actualisar
 updateLoginButtonAccessKey = U
 updateLoginButtonDeny.label = Betg actualisar
 updateLoginButtonDeny.accesskey = B
+updateLoginButtonDelete.label = Allontanar l'infurmaziun d'annunzia memorisada
+updateLoginButtonDelete.accesskey = A
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
