Pontoon: Update German (de) localization of Firefox Co-authored-by: archaeopteryx <archaeopteryx@coole-files.de>

--- a/de/browser/installer/nsisstrings.properties
+++ b/de/browser/installer/nsisstrings.properties
@@ -27,9 +27,9 @@ STUB_CLEANUP_PAVEOVER_BUTTON=&Aktualisieren
 STUB_CLEANUP_REINSTALL_BUTTON=&Neu installieren
 STUB_CLEANUP_CHECKBOX_LABEL=Einstellungen &zurücksetzen und alte Add-ons entfernen für beste Leistung
 
-STUB_CLEANUP_PAVEOVER_BUTTON2=Update
+STUB_CLEANUP_PAVEOVER_BUTTON2=Aktualisieren
 STUB_CLEANUP_REINSTALL_BUTTON2=Neu installieren
-STUB_CLEANUP_CHECKBOX_LABEL2=Für optimale Leistung Standardeinstellungen wiederherstellen und alte Add-ons entfernen
+STUB_CLEANUP_CHECKBOX_LABEL2=Einstellungen zurücksetzen und alte Add-ons entfernen für beste Leistung
 
 STUB_INSTALLING_LABEL2=Wird jetzt installiert…
 # The \n in the next string is intended to force a nice-looking layout in en-US
