--- a/de/devtools/client/debugger.properties
+++ b/de/devtools/client/debugger.properties
@@ -754,7 +754,7 @@ watchpoints.setWatchpoint=set für Eigenschaft
 
 # LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
-watchpoints.getOrSetWatchpoint=Eigenschaft setzen oder abrufen
+watchpoints.getOrSetWatchpoint=set oder get für Eigenschaft
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
 # context menu to delete a watchpoint on an object property.
